# GrabScreen.jl

./: Manifest.toml  Project.toml  readme.md
code/: CMakeLists.txt  grabscreen.cpp
examples/: rgb.jl
src/: GrabScreen.jl
